# cfe_ros2_bridge_plugin

./: README.md
cfe_msg_converter/: package.xml  setup.cfg  setup.py
cfe_msg_converter/cfe_msg_converter/: cfe_msg_converter.py
cfe_msg_converter/config/: cfe_msg_converter.yaml  map_ros_name.yaml
cfe_msg_converter/launch/: cfe_msg_converter.launch.py
cfe_msg_converter/resource/: CMakeLists.template
cfe_msgs/: CMakeLists.txt  package.xml
cfe_msgs/msg/: BinaryPktPayload.msg  CCSDSExtendedHeader.msg  CCSDSPrimaryHeader.msg  CCSDSSpacePackett.msg  CFEESAppInfo.msg  CFEESAppNameCmd.msg  CFEESAppNameCmdPayload.msg  CFEESAppReloadCmdPayload.msg  CFEESBlockStats.msg  CFEESDeleteCDSCmd.msg  CFEESDeleteCDSCmdPayload.msg  CFEESDumpCDSRegistryCmd.msg  CFEESDumpCDSRegistryCmdPayload.msg  CFEESFileNameCmd.msg  CFEESFileNameCmdPayload.msg  CFEESHousekeepingTlm.msg  CFEESHousekeepingTlmPayload.msg  CFEESMemPoolStats.msg  CFEESMemStatsTlm.msg  CFEESNoArgsCmd.msg  CFEESOneAppTlm.msg  CFEESOneAppTlmPayload.msg  CFEESOverWriteSysLogCmd.msg  CFEESOverWriteSysLogCmdPayload.msg  CFEESPoolStatsTlmPayload.msg  CFEESReloadAppCmd.msg  CFEESRestartCmd.msg  CFEESRestartCmdPayload.msg  CFEESSendMemPoolStatsCmd.msg  CFEESSendMemPoolStatsCmdPayload.msg  CFEESSetMaxPRCountCmd.msg  CFEESSetMaxPRCountCmdPayload.msg  CFEESSetPerfFilterMaskCmd.msg  CFEESSetPerfFilterMaskCmdPayload.msg  CFEESSetPerfTrigMaskCmdPayload.msg  CFEESSetPerfTriggerMaskCmd.msg  CFEESStartApp.msg  CFEESStartAppCmdPayload.msg  CFEESStartPerfCmdPayload.msg  CFEESStartPerfDataCmd.msg  (+239 more)
cfe_plugin/: CMakeLists.txt  package.xml  setup.py
cfe_plugin/cfe_plugin/: cfe_plugin.py  cmd_receiver.py  command_handler.py  juicer_bridge.py  juicer_converter.py  juicer_fields.py  juicer_if.py  juicer_interface.py  juicer_symbols.py  juicer_telem_receiver.py  parse_cfe_config.py  telem_receiver.py
cfe_plugin/config/: cfe_config.yaml  cfe_config_multihost.yaml  cfe_config_simple.yaml
cfe_plugin/launch/: cfe_bridge.launch.py
cfe_plugin/resource/: cfs_bootes-rc1-dev83_TL.sqlite
cfe_plugin/test/: test_cfdp_gsw_to_cfe.py  test_cfe_set_time.py  test_telemetry_flow.py
cfs_msgs/: CMakeLists.template  CMakeLists.txt  package.xml
cfs_msgs/msg/: CfeEsDeleteCdsCc.msg  CfeEsQueryAllCc.msg  CfeEsQueryAllTasksCc.msg  CfeEsQueryOneCc.msg  CfeEsReloadAppCc.msg  CfeEsRestartAppCc.msg  CfeEsRestartCc.msg  CfeEsSetPerfFilterMaskCc.msg  CfeEsStartAppCc.msg  CfeEsStopAppCc.msg  CfeEsWriteErLogCc.msg  CfeEsWriteSyslogCc.msg  CfeEvsAddEventFilterCc.msg  CfeEvsDisableAppEventsCc.msg  CfeEvsDisableEventTypeCc.msg  CfeEvsResetAllFiltersCc.msg  CfeEvsResetAppCounterCc.msg  CfeEvsWriteAppDataFileCc.msg  CfeSbSendPipeInfoCc.msg  CfeTblAbortLoadCc.msg  CfeTblDeleteCdsCc.msg  CfeTblDumpCc.msg  CfeTblDumpRegistryCc.msg  CfeTimeAdd1HzAdjustmentCc.msg  CfeTimeSetLeapSecondsCc.msg  CfeTimeSetSourceCc.msg  CfeTimeSubAdjustCc.msg  CfeTimeSubDelayCc.msg  CiCapturePdusCc.msg  CiLabMsg.msg  ESBlockStatsTlm1.msg  ESMEMSTATSTlm.msg  ESShellTlm.msg  EsMsg8H.msg  ROBOTSIMHKTlm.msg  RobotSimSetJointsCc.msg  SBPipeDepthStatsTlm1.msg  SBPipeDepthStatsTlm2.msg  StructCFEESAppNameCmdT.msg  StructCFEESNoArgsCmdT.msg  (+19 more)
juicer_util/: package.xml  setup.cfg  setup.py
juicer_util/config/: cfe_cmd_tlm_config.yaml  cfe_groundsystem_config.yaml  cfe_plugin_config.yaml  cfe_sbn_config.yaml
juicer_util/juicer_util/: generate_juicer_database.py  juicer_database.py  juicer_fields.py  juicer_interface.py  juicer_symbols.py  parse_cfe_config.py
juicer_util/launch/: generate_juicer_database.launch.py
juicer_util/scripts/: copy_rosbag_updating_time.py  generate_juicer_databases.py
