<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>cfe_msg_converter</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="tmilam@traclabs.com">tmilam</maintainer>
  <license>TODO: License declaration</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <depend>cfe_msgs</depend>
  <depend>cfe_plugin</depend>
  <depend>fsw_ros2_bridge</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>

</package>
